Frontend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: shilamurti-frontend
spec:
  parentRefs:
    - name: ecommerce-gateway
      namespace: default
  hostnames:
    - shilamurti.com
  rules:
    - backendRefs:
        - name: shilamurti-service
          port: 80
